examples/bad/argument-types-dont-match-bool-var.bg
(var x 42)
(bool not [(bool b)]
  (if b False True))
(not x) # Runtime exception
